force-app/main/default/objects/Data_Field__c/Data_Field__c.object-meta.xml
<CustomObject>
    <label>Data Field</label>
    <nameField>
        <label>Data Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>