force-app/main/default/objects/Data_Field__c/fields/AI_Prediction_Field__c.field-meta.xml
<CustomField>
    <fullName>AI_Prediction_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the current field is enabled to display Einstein prediction data, false otherwise</description>
    <inlineHelpText>True if the current field is enabled to display Einstein prediction data, false otherwise</inlineHelpText>
    <label>AI Prediction Field</label>
    <type>Checkbox</type>
</CustomField>