force-app/main/default/objects/Data_Field__c/fields/Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the field is an Auto Number field, false otherwise</description>
    <inlineHelpText>True if the field is an Auto Number field, false otherwise</inlineHelpText>
    <label>Auto Number</label>
    <type>Checkbox</type>
</CustomField>