force-app/main/default/objects/Data_Field__c/fields/Business_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner_Id__c</fullName>
    <description>Indicates the person or group associated with this field. The business owner understands the importance of the field’s data to your company and might be responsible for determining the minimum security classification.</description>
    <inlineHelpText>Indicates the person or group associated with this field. The business owner understands the importance of the field’s data to your company and might be responsible for determining the minimum security classification.</inlineHelpText>
    <label>Business Owner Id</label>
    <type>TextArea</type>
</CustomField>