force-app/main/default/objects/Data_Field__c/fields/Business_Rules__c.field-meta.xml
<CustomField>
    <fullName>Business_Rules__c</fullName>
    <label>Business Rules</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>