force-app/main/default/objects/Data_Field__c/fields/Business_Status__c.field-meta.xml
<CustomField>
    <fullName>Business_Status__c</fullName>
    <description>Indicates whether the field is in use. Valid values are:
Active
DeprecateCandidate
Hidden</description>
    <inlineHelpText>Indicates whether the field is in use. Valid values are:
Active
DeprecateCandidate
Hidden</inlineHelpText>
    <label>Business Status</label>
    <type>TextArea</type>
</CustomField>