force-app/main/default/objects/Data_Field__c/fields/Byte_Length__c.field-meta.xml
<CustomField>
    <fullName>Byte_Length__c</fullName>
    <description>For variable-length fields (including binary fields), returns the maximum size of the field, in bytes.</description>
    <inlineHelpText>For variable-length fields (including binary fields), returns the maximum size of the field, in bytes.</inlineHelpText>
    <label>Byte Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>