force-app/main/default/objects/Data_Field__c/fields/Calculated__c.field-meta.xml
<CustomField>
    <fullName>Calculated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the field is a custom formula field, false otherwise. Note that custom formula fields are always read-only</description>
    <inlineHelpText>True if the field is a custom formula field, false otherwise. Note that custom formula fields are always read-only</inlineHelpText>
    <label>Calculated</label>
    <type>Checkbox</type>
</CustomField>