force-app/main/default/objects/Data_Field__c/fields/Calculated_Formula__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Formula__c</fullName>
    <description>Returns the formula specified for this field</description>
    <inlineHelpText>Returns the formula specified for this field</inlineHelpText>
    <label>Calculated Formula</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>