force-app/main/default/objects/Data_Field__c/fields/Cascade_Delete__c.field-meta.xml
<CustomField>
    <fullName>Cascade_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the child object is deleted when the parent object is deleted, false otherwise</description>
    <inlineHelpText>True if the child object is deleted when the parent object is deleted, false otherwise</inlineHelpText>
    <label>Cascade Delete</label>
    <type>Checkbox</type>
</CustomField>