force-app/main/default/objects/Data_Field__c/fields/Controller__c.field-meta.xml
<CustomField>
    <fullName>Controller__c</fullName>
    <description>Controlling field</description>
    <inlineHelpText>Controlling field</inlineHelpText>
    <label>Controller</label>
    <type>TextArea</type>
</CustomField>