force-app/main/default/objects/Data_Field__c/fields/Controlling_Field_Definition_Id__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Field_Definition_Id__c</fullName>
    <description>The ID of the ControllingFieldDefinition for this field.</description>
    <inlineHelpText>The ID of the ControllingFieldDefinition for this field.</inlineHelpText>
    <label>Controlling Field Definition Id</label>
    <type>TextArea</type>
</CustomField>