force-app/main/default/objects/Data_Field__c/fields/Custom__c.field-meta.xml
<CustomField>
    <fullName>Custom__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the field is a custom field, false if it is a standard field, such as Name</description>
    <inlineHelpText>True if the field is a custom field, false if it is a standard field, such as Name</inlineHelpText>
    <label>Custom</label>
    <type>Checkbox</type>
</CustomField>