force-app/main/default/objects/Data_Field__c/fields/Data_Object__c.field-meta.xml
<CustomField>
    <fullName>Data_Object__c</fullName>
    <label>Data Object</label>
    <referenceTo>Data_Object__c</referenceTo>
    <relationshipLabel>Data Fields</relationshipLabel>
    <relationshipName>Data_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>