force-app/main/default/objects/Data_Field__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <description>Data type of the field, for example Text(40) or Date/Time. The values are defined as they are in the user interface, not the corresponding API data type names.</description>
    <inlineHelpText>Data type of the field, for example Text(40) or Date/Time. The values are defined as they are in the user interface, not the corresponding API data type names.</inlineHelpText>
    <label>DataType</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>