force-app/main/default/objects/Data_Field__c/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <description>Default value for this field</description>
    <inlineHelpText>Default value for this field</inlineHelpText>
    <label>Default Value</label>
    <type>TextArea</type>
</CustomField>