force-app/main/default/objects/Data_Field__c/fields/Default_Value_Formula__c.field-meta.xml
<CustomField>
    <fullName>Default_Value_Formula__c</fullName>
    <label>Default Value Formula</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>