force-app/main/default/objects/Data_Field__c/fields/Defaulted_On_Create__c.field-meta.xml
<CustomField>
    <fullName>Defaulted_On_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the field receives a default value when created, false otherwise</description>
    <inlineHelpText>True if the field receives a default value when created, false otherwise</inlineHelpText>
    <label>Defaulted On Create</label>
    <type>Checkbox</type>
</CustomField>