force-app/main/default/objects/Data_Field__c/fields/Dependent_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Picklist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the picklist is a dependent picklist, false otherwise</description>
    <inlineHelpText>True if the picklist is a dependent picklist, false otherwise</inlineHelpText>
    <label>Dependent Picklist</label>
    <type>Checkbox</type>
</CustomField>