force-app/main/default/objects/Data_Field__c/fields/Deprecated_and_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Deprecated_and_Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reserved for future use</description>
    <inlineHelpText>Reserved for future use.</inlineHelpText>
    <label>Deprecated and Hidden</label>
    <type>Checkbox</type>
</CustomField>