force-app/main/default/objects/Data_Field__c/fields/Digits__c.field-meta.xml
<CustomField>
    <fullName>Digits__c</fullName>
    <description>Maximum number of digits specified for the field. This method is only valid with Integer fields</description>
    <inlineHelpText>Maximum number of digits specified for the field. This method is only valid with Integer fields</inlineHelpText>
    <label>Digits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>