force-app/main/default/objects/Data_Field__c/fields/Durable_Id__c.field-meta.xml
<CustomField>
    <fullName>Durable_Id__c</fullName>
    <description>Unique identifier for the field. Always retrieve this value before using it, as the value isn’t guaranteed to stay the same from one release to the next. To simplify queries, use this field.</description>
    <inlineHelpText>Unique identifier for the field. Always retrieve this value before using it, as the value isn’t guaranteed to stay the same from one release to the next. To simplify queries, use this field.</inlineHelpText>
    <label>Durable Id</label>
    <type>TextArea</type>
</CustomField>