force-app/main/default/objects/Data_Field__c/fields/Entity_Definition_Id__c.field-meta.xml
<CustomField>
    <fullName>Entity_Definition_Id__c</fullName>
    <description>The durable ID for the object defined in the EntityDefinition field.</description>
    <inlineHelpText>The durable ID for the object defined in the EntityDefinition field.</inlineHelpText>
    <label>Entity Definition Id</label>
    <type>TextArea</type>
</CustomField>