force-app/main/default/objects/Data_Field__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the field is used as an external ID, false otherwise</description>
    <inlineHelpText>True if the field is used as an external ID, false otherwise</inlineHelpText>
    <label>External Id</label>
    <type>Checkbox</type>
</CustomField>