force-app/main/default/objects/Data_Field__c/fields/Extra_Type_Info__c.field-meta.xml
<CustomField>
    <fullName>Extra_Type_Info__c</fullName>
    <description>Represents further definition of a type. Available in Tooling API starting version 34.0.
For type textarea:
plaintextarea
richtextarea
For type URL, image
For type reference,
externallookup
indirectlookup
externallookup
For Account,
switchablepersonname
personname</description>
    <inlineHelpText>Represents further definition of a type</inlineHelpText>
    <label>Extra Type Info</label>
    <type>TextArea</type>
</CustomField>