force-app/main/default/objects/Data_Field__c/fields/Filterable__c.field-meta.xml
<CustomField>
    <fullName>Filterable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the field can be used as part of the filter criteria of a WHERE statement, false otherwise</description>
    <inlineHelpText>True if the field can be used as part of the filter criteria of a WHERE statement, false otherwise</inlineHelpText>
    <label>Filterable</label>
    <type>Checkbox</type>
</CustomField>