force-app/main/default/objects/Data_Field__c/fields/Formula_Treat_Null_Number_As_Zero__c.field-meta.xml
<CustomField>
    <fullName>Formula_Treat_Null_Number_As_Zero__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if null is treated as zero in a formula field, false otherwise</description>
    <inlineHelpText>True if null is treated as zero in a formula field, false otherwise</inlineHelpText>
    <label>Formula Treat Null Number As Zero</label>
    <type>Checkbox</type>
</CustomField>