force-app/main/default/objects/Data_Field__c/fields/Groupable__c.field-meta.xml
<CustomField>
    <fullName>Groupable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the field can be included in the GROUP BY clause of a SOQL query, false otherwise. This method is only available for Apex classes and triggers saved using API version 18.0 and higher</description>
    <inlineHelpText>True if the field can be included in the GROUP BY clause of a SOQL query, false otherwise. This method is only available for Apex classes and triggers saved using API version 18.0 and higher</inlineHelpText>
    <label>Groupable</label>
    <type>Checkbox</type>
</CustomField>