force-app/main/default/objects/Data_Field__c/fields/HTML_Formatted__c.field-meta.xml
<CustomField>
    <fullName>HTML_Formatted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the field has been formatted for HTML and should be encoded for display in HTML, false otherwise. One example of a field that returns true for this method is a hyperlink custom formula field. Another example is a custom formula field that has an IMAGE text function</description>
    <inlineHelpText>True if the field has been formatted for HTML and should be encoded for display in HTML, false otherwise. One example of a field that returns true for this method is a hyperlink custom formula field</inlineHelpText>
    <label>HTML Formatted</label>
    <type>Checkbox</type>
</CustomField>