force-app/main/default/objects/Data_Field__c/fields/Id_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Id_Lookup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the field can be used to specify a record in an upsert method, false otherwise</description>
    <inlineHelpText>True if the field can be used to specify a record in an upsert method, false otherwise</inlineHelpText>
    <label>Id Lookup</label>
    <type>Checkbox</type>
</CustomField>