force-app/main/default/objects/Data_Field__c/fields/Inline_Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Inline_Help_Text__c</fullName>
    <description>Content of the field-level help</description>
    <inlineHelpText>Content of the field-level help</inlineHelpText>
    <label>Inline Help Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>