force-app/main/default/objects/Data_Field__c/fields/Is_Api_Sortable__c.field-meta.xml
<CustomField>
    <fullName>Is_Api_Sortable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, a query can sort on this field.You can&apos;t sort or filter compound fields. This field’s value is always false for compound fields.</description>
    <inlineHelpText>If true, a query can sort on this field.You can&apos;t sort or filter compound fields. This field’s value is always false for compound fields.</inlineHelpText>
    <label>Is Api Sortable</label>
    <type>Checkbox</type>
</CustomField>