force-app/main/default/objects/Data_Field__c/fields/Is_Compact_Layoutable__c.field-meta.xml
<CustomField>
    <fullName>Is_Compact_Layoutable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, the field can be included in a compact layout.</description>
    <inlineHelpText>If true, the field can be included in a compact layout.</inlineHelpText>
    <label>Is Compact Layoutable</label>
    <type>Checkbox</type>
</CustomField>