force-app/main/default/objects/Data_Field__c/fields/Is_Compound__c.field-meta.xml
<CustomField>
    <fullName>Is_Compound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Compound</label>
    <type>Checkbox</type>
</CustomField>