force-app/main/default/objects/Data_Field__c/fields/Is_Field_History_Tracked__c.field-meta.xml
<CustomField>
    <fullName>Is_Field_History_Tracked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, the field’s history can be tracked.</description>
    <inlineHelpText>If true, the field’s history can be tracked.</inlineHelpText>
    <label>Is Field History Tracked</label>
    <type>Checkbox</type>
</CustomField>