force-app/main/default/objects/Data_Field__c/fields/Is_High_Scale_Number__c.field-meta.xml
<CustomField>
    <fullName>Is_High_Scale_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the field stores numbers to 8 decimal places regardless of what’s specified in the field details (true) or not (false). Used to handle currencies for products that cost fractions of a cent, in large quantities. If high-scale unit pricing isn’t enabled in your organization, this field isn’t returned.</description>
    <inlineHelpText>Indicates whether the field stores numbers to 8 decimal places regardless of what’s specified in the field details (true) or not (false). Used to handle currencies for products that cost fractions of a cent, in large quantities. If high-scale unit pricing</inlineHelpText>
    <label>Is High Scale Number</label>
    <type>Checkbox</type>
</CustomField>