force-app/main/default/objects/Data_Field__c/fields/Is_Indexed__c.field-meta.xml
<CustomField>
    <fullName>Is_Indexed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, the field is indexed in the database. Internal (database) indexing is different from indexing for search.
We recommend targeting indexed fields for better response times in SOQL queries, reports, and list views.</description>
    <inlineHelpText>If true, the field is indexed in the database. Internal (database) indexing is different from indexing for search.
We recommend targeting indexed fields for better response times in SOQL queries, reports, and list views.</inlineHelpText>
    <label>Is Indexed</label>
    <type>Checkbox</type>
</CustomField>