force-app/main/default/objects/Data_Field__c/fields/Is_List_Filterable__c.field-meta.xml
<CustomField>
    <fullName>Is_List_Filterable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, the field can be filtered for a related list.</description>
    <inlineHelpText>If true, the field can be filtered for a related list.</inlineHelpText>
    <label>Is List Filterable</label>
    <type>Checkbox</type>
</CustomField>