force-app/main/default/objects/Data_Field__c/fields/Is_List_Sortable__c.field-meta.xml
<CustomField>
    <fullName>Is_List_Sortable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, the field can be sorted for a related list.</description>
    <inlineHelpText>If true, the field can be sorted for a related list.</inlineHelpText>
    <label>Is List Sortable</label>
    <type>Checkbox</type>
</CustomField>