force-app/main/default/objects/Data_Field__c/fields/Is_List_Visible__c.field-meta.xml
<CustomField>
    <fullName>Is_List_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, the field can be included in a related list.</description>
    <inlineHelpText>If true, the field can be included in a related list.</inlineHelpText>
    <label>IsListVisible</label>
    <type>Checkbox</type>
</CustomField>