force-app/main/default/objects/Data_Field__c/fields/Is_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Is_Name_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, the field is a name field</description>
    <inlineHelpText>If true, the field is a name field</inlineHelpText>
    <label>Is Name Field</label>
    <type>Checkbox</type>
</CustomField>