force-app/main/default/objects/Data_Field__c/fields/Is_Polymorphic_Foreign_Key__c.field-meta.xml
<CustomField>
    <fullName>Is_Polymorphic_Foreign_Key__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the foreign key includes multiple object types (true) or not (false).</description>
    <inlineHelpText>Indicates whether the foreign key includes multiple object types (true) or not (false).</inlineHelpText>
    <label>Is Polymorphic Foreign Key</label>
    <type>Checkbox</type>
</CustomField>