force-app/main/default/objects/Data_Field__c/fields/Is_Workflow_Filterable__c.field-meta.xml
<CustomField>
    <fullName>Is_Workflow_Filterable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, the field can be filtered for a workflow.</description>
    <inlineHelpText>If true, the field can be filtered for a workflow.</inlineHelpText>
    <label>Is Workflow Filterable</label>
    <type>Checkbox</type>
</CustomField>