force-app/main/default/objects/Data_Field__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Text label that is displayed next to the field in the Salesforce user interface. This label can be localized</description>
    <inlineHelpText>Text label that is displayed next to the field in the Salesforce user interface. This label can be localized</inlineHelpText>
    <label>Label</label>
    <type>TextArea</type>
</CustomField>