force-app/main/default/objects/Data_Field__c/fields/Last_Modified_By_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By_Id__c</fullName>
    <label>Last Modified By Id</label>
    <type>TextArea</type>
</CustomField>