force-app/main/default/objects/Data_Field__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <description>Maximum size of the field for the DescribeFieldResult object in Unicode characters (not bytes)</description>
    <inlineHelpText>Maximum size of the field for the DescribeFieldResult object in Unicode characters (not bytes)</inlineHelpText>
    <label>Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>