force-app/main/default/objects/Data_Field__c/fields/Local_Name__c.field-meta.xml
<CustomField>
    <fullName>Local_Name__c</fullName>
    <description>Name of the field, similar to the getName method. However, if the field is part of the current namespace, the namespace portion of the name is omitted</description>
    <inlineHelpText>Name of the field, similar to the getName method. However, if the field is part of the current namespace, the namespace portion of the name is omitted</inlineHelpText>
    <label>Local Name</label>
    <type>TextArea</type>
</CustomField>