force-app/main/default/objects/Data_Field__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Field name used in Apex</description>
    <inlineHelpText>Field name used in Apex</inlineHelpText>
    <label>Name</label>
    <type>TextArea</type>
</CustomField>