force-app/main/default/objects/Data_Field__c/fields/Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Name_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the field is a name field, false otherwise</description>
    <inlineHelpText>True if the field is a name field, false otherwise</inlineHelpText>
    <label>Name Field</label>
    <type>Checkbox</type>
</CustomField>