force-app/main/default/objects/Data_Field__c/fields/Name_Pointing__c.field-meta.xml
<CustomField>
    <fullName>Name_Pointing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the field can have multiple types of objects as parents. For example, a task can have both the Contact/Lead ID (WhoId) field and the Opportunity/Account ID (WhatId) field return true for this method. because either of those objects can be the parent of a particular task record. This method returns false otherwise</description>
    <inlineHelpText>True if the field can have multiple types of objects as parents. For example, a task can have both the Contact/Lead ID (WhoId) field and the Opportunity/Account ID (WhatId) field return true for this method. because either of those objects can be the pare</inlineHelpText>
    <label>Name Pointing</label>
    <type>Checkbox</type>
</CustomField>