force-app/main/default/objects/Data_Field__c/fields/Namespace_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Namespace_Prefix__c</fullName>
    <description>he namespace prefix associated with this object. Each Developer Edition organization that creates a managed package has a unique namespace prefix. Limit: 15 characters. You can refer to a component in a managed package by using the namespacePrefix__componentName notation.
The namespace prefix can have one of the following values:

In Developer Edition organizations, the namespace prefix is set to the namespace prefix of the organization for all objects that support it. There is an exception if an object is in an installed managed package. In that case, the object has the namespace prefix of the installed managed package. This field’s value is the namespace prefix of the Developer Edition organization of the package developer.
In organizations that are not Developer Edition organizations, NamespacePrefix is only set for objects that are part of an installed managed package. There is no namespace prefix for all other objects.</description>
    <label>Namespace Prefix</label>
    <type>TextArea</type>
</CustomField>