force-app/main/default/objects/Data_Field__c/fields/Nillable__c.field-meta.xml
<CustomField>
    <fullName>Nillable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the field is nillable, false otherwise. A nillable field can have empty content. A non-nillable field must have a value for the object to be created or saved</description>
    <inlineHelpText>True if the field is nillable, false otherwise. A nillable field can have empty content. A non-nillable field must have a value for the object to be created or saved</inlineHelpText>
    <label>Nillable</label>
    <type>Checkbox</type>
</CustomField>