force-app/main/default/objects/Data_Field__c/fields/Object_Manager__c.field-meta.xml
<CustomField>
    <fullName>Object_Manager__c</fullName>
    <description>Direct Link to the field object manager page</description>
    <formula>IF(  Right(Data_Object__r.Name, 1) == &apos;e&apos;, 

HYPERLINK(&quot;/lightning/setup/EventObjects/page?address=/&quot;&amp;Right(Durable_Id__c,Len(Durable_Id__c)-Find(&quot;.&quot;, Durable_Id__c))&amp;&quot;?setupid=EventObjects&quot;,  Name__c&amp;&quot; Object Manager Link&quot; , &quot;_self&quot;),

HYPERLINK(&quot;/lightning/setup/ObjectManager/&quot;&amp;Left(Durable_Id__c,Find(&quot;.&quot;, Durable_Id__c)-1)&amp;&quot;/FieldsAndRelationships/&quot;&amp;Right(Durable_Id__c,Len(Durable_Id__c)-Find(&quot;.&quot;, Durable_Id__c))&amp;&quot;/view&quot;,  Name__c&amp;&quot; Object Manager Link&quot; , &quot;_self&quot;))</formula>
    <inlineHelpText>Direct Link to the field object manager page</inlineHelpText>
    <label>Object Manager</label>
    <type>Text</type>
</CustomField>