force-app/main/default/objects/Data_Field__c/fields/Permissionable__c.field-meta.xml
<CustomField>
    <fullName>Permissionable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if field permissions can be specified for the field, false otherwise</description>
    <inlineHelpText>True if field permissions can be specified for the field, false otherwise</inlineHelpText>
    <label>Permissionable</label>
    <type>Checkbox</type>
</CustomField>