force-app/main/default/objects/Data_Field__c/fields/Precision__c.field-meta.xml
<CustomField>
    <fullName>Precision__c</fullName>
    <description>For fields of type Double, returns the maximum number of digits that can be stored, including all numbers to the left and to the right of the decimal point (but excluding the decimal point character).</description>
    <inlineHelpText>For fields of type Double, returns the maximum number of digits that can be stored, including all numbers to the left and to the right of the decimal point (but excluding the decimal point character).</inlineHelpText>
    <label>Precision</label>
    <type>TextArea</type>
</CustomField>