force-app/main/default/objects/Data_Field__c/fields/Reference_Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Reference_Target_Field__c</fullName>
    <description>Name of the custom field on the parent standard or custom object whose values are matched against the values of the child external object&apos;s indirect lookup relationship field. The match is done to determine which records are related to each other</description>
    <inlineHelpText>Name of the custom field on the parent standard or custom object whose values are matched against the values of the child external object&apos;s indirect lookup relationship field. The match is done to determine which records are related to each other</inlineHelpText>
    <label>Reference Target Field</label>
    <type>TextArea</type>
</CustomField>