force-app/main/default/objects/Data_Field__c/fields/Reference_To__c.field-meta.xml
<CustomField>
    <fullName>Reference_To__c</fullName>
    <description>List of Schema.sObjectType objects for the parent objects of this field. If the isNamePointing method returns true, there is more than one entry in the list, otherwise there is only one</description>
    <inlineHelpText>List of Schema.sObjectType objects for the parent objects of this field. If the isNamePointing method returns true, there is more than one entry in the list, otherwise there is only one</inlineHelpText>
    <label>Reference To</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>