force-app/main/default/objects/Data_Field__c/fields/Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Name__c</fullName>
    <description>Name of the relationship</description>
    <inlineHelpText>Name of the relationship</inlineHelpText>
    <label>Relationship Name</label>
    <type>TextArea</type>
</CustomField>