force-app/main/default/objects/Data_Field__c/fields/Relationship_Order__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Order__c</fullName>
    <description>Returns 1 if the field is a child, 0 otherwise</description>
    <inlineHelpText>Returns 1 if the field is a child, 0 otherwise</inlineHelpText>
    <label>Relationship Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>