force-app/main/default/objects/Data_Field__c/fields/Restricted_Delete__c.field-meta.xml
<CustomField>
    <fullName>Restricted_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Returns true if the parent object can&apos;t be deleted because it is referenced by a child object, false otherwise</description>
    <inlineHelpText>Returns true if the parent object can&apos;t be deleted because it is referenced by a child object, false otherwise</inlineHelpText>
    <label>Restricted Delete</label>
    <type>Checkbox</type>
</CustomField>