force-app/main/default/objects/Data_Field__c/fields/Restricted_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Restricted_Picklist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the field is a restricted picklist, false otherwise</description>
    <inlineHelpText>True if the field is a restricted picklist, false otherwise</inlineHelpText>
    <label>Restricted Picklist</label>
    <type>Checkbox</type>
</CustomField>