force-app/main/default/objects/Data_Field__c/fields/Scale__c.field-meta.xml
<CustomField>
    <fullName>Scale__c</fullName>
    <description>Fields of type Double, returns the number of digits to the right of the decimal point. Any extra digits to the right of the decimal point are truncated.</description>
    <inlineHelpText>Fields of type Double, returns the number of digits to the right of the decimal point. Any extra digits to the right of the decimal point are truncated.</inlineHelpText>
    <label>Scale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>