force-app/main/default/objects/Data_Field__c/fields/Search_Prefilterable__c.field-meta.xml
<CustomField>
    <fullName>Search_Prefilterable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if a foreign key can be included in prefiltering when used in a SOSL WHERE clause, false otherwise</description>
    <inlineHelpText>True if a foreign key can be included in prefiltering when used in a SOSL WHERE clause, false otherwise</inlineHelpText>
    <label>Search Prefilterable</label>
    <type>Checkbox</type>
</CustomField>