force-app/main/default/objects/Data_Field__c/fields/Security_Classification__c.field-meta.xml
<CustomField>
    <fullName>Security_Classification__c</fullName>
    <description>Indicates the sensitivity of the data contained in this field. Valid values are:
Public
Internal
Confidential
Restricted
MissionCritical</description>
    <inlineHelpText>Indicates the sensitivity of the data contained in this field. Valid values are:
Public
Internal
Confidential
Restricted
MissionCritical</inlineHelpText>
    <label>Security Classification</label>
    <type>TextArea</type>
</CustomField>