force-app/main/default/objects/Data_Field__c/fields/Soap_Type__c.field-meta.xml
<CustomField>
    <fullName>Soap_Type__c</fullName>
    <description>Returns one of the SoapType enum values, depending on the type of field</description>
    <inlineHelpText>Returns one of the SoapType enum values, depending on the type of field</inlineHelpText>
    <label>Soap Type</label>
    <type>TextArea</type>
</CustomField>