force-app/main/default/objects/Data_Field__c/fields/SObject_Field__c.field-meta.xml
<CustomField>
    <fullName>SObject_Field__c</fullName>
    <description>Returns the token for this field</description>
    <inlineHelpText>Returns the token for this field</inlineHelpText>
    <label>SObject Field</label>
    <type>TextArea</type>
</CustomField>