force-app/main/default/objects/Data_Field__c/fields/Sortable__c.field-meta.xml
<CustomField>
    <fullName>Sortable__c</fullName>
    <description>True if a query can sort on the field, false otherwise</description>
    <inlineHelpText>True if a query can sort on the field, false otherwise</inlineHelpText>
    <label>Sortable</label>
    <type>TextArea</type>
</CustomField>